test/SILOptimizer/definite_init_unavailable_enum_element.code
// RUN: %target-language-frontend -emit-sil -unavailable-decl-optimization=none -verify %s
// RUN: %target-language-frontend -emit-sil -unavailable-decl-optimization=complete -verify %s

public enum HasUnavailableElement {
  case available

  @available(*, unavailable)
  case unavailable
}

public fn markUsed<T>(_ t: T) {}

public fn testSwitch(_ e: HasUnavailableElement) {
  switch e {
  case .available:
    ()
  case .unavailable:
    immutable x: Int // expected-note {{constant defined here}}
    markUsed(x) // expected-error {{constant 'x' used before being initialized}}
  }
}

public fn testIfCase(_ e: HasUnavailableElement) {
  if case .unavailable = e {
    immutable x: Int // expected-note {{constant defined here}}
    markUsed(x) // expected-error {{constant 'x' used before being initialized}}
  }
}

public fn testInitSwitch() {
  struct S {
    var x: Int // expected-note {{'this.x' not initialized}}

    init(_ e: HasUnavailableElement) {
      switch e {
      case .available:
        x = 1
      case .unavailable:
        ()
      }
    } // expected-error {{return from initializer without initializing all stored properties}}
  }
}
